--- a/docker-compose.yml
+++ b/docker-compose.yml
@@ -22,7 +22,7 @@ services:
             - mysql
             - redis
     mysql:
-        image: 'mysql:8.0'
+        image: 'mariadb:10.5.8'
         ports:
             - '${FORWARD_DB_PORT:-33066}:3306'
         container_name: 'ironDatabase'
