--- a/docker-config/supervisord.conf
+++ b/docker-config/supervisord.conf
@@ -4,34 +4,11 @@ user=root
 logfile=/var/log/supervisor/supervisord.log
 pidfile=/var/run/supervisord.pid
 
-#[program:php]
-#via artisan command (laravel).
-#command=/usr/bin/php -d variables_order=EGPCS /var/www/html/Iron/artisan serve --host=0.0.0.0 --port=80
-#via php command. (we shall use this command or php command becuase we have another application inside the public directory CRM)
-#so the entry point is a public file the public file has an index file to start working on and a CRM project when the user chooses one of these choices the servicer will take it to your choices.
-#command=/usr/bin/php -S 0.0.0.0:80 -t /var/www/html/Iron/public
-#if you have the cron or schedule you can run with this command separated with this symbol(&).
-#command=/usr/bin/php -S 0.0.0.0:80 -t /var/www/html/Iron/public && /usr/bin/php /var/www/html artisan schedual:run
-#permission
-#user=Iron
-#environment=LARAVEL_SAIL="1"
-#stdout_logfile=/dev/stdout
-#stdout_logfile_maxbytes=0
-#stderr_logfile=/dev/stderr
-#stderr_logfile_maxbytes=0
-
-[program:artisan]
-command=chmod -R 777 /var/www/html/Iron/storage
-command=chmod -R 777 /var/www/html/Iron/bootstrap
-command=/usr/bin/php /var/www/html/Iron/artisan optimize:clear
-command=/usr/bin/php /var/www/html/Iron/artisan view:cache
-command=/usr/bin/php /var/www/html/Iron/artisan route:cache
-command=/usr/bin/php /var/www/html/Iron/artisan config:cache
-command=/usr/bin/php /var/www/html/Iron/artisan queue:work
-
-[program:apache2]
-command=apachectl -D "FOREGROUND" -k start
-redirect_stderr=true
-
-[program:websocket]
-command=/usr/bin/php /var/www/html/Iron/artisan websockets:serve
+[program:php]
+command=/usr/bin/php -d variables_order=EGPCS /var/www/html/Iron/artisan octane:start --server=swoole --host=0.0.0.0 --port=80
+user=sail
+environment=LARAVEL_SAIL="1"
+stdout_logfile=/dev/stdout
+stdout_logfile_maxbytes=0
+stderr_logfile=/dev/stderr
+stderr_logfile_maxbytes=0
