--- a/.env.example
+++ b/.env.example
@@ -1,7 +1,7 @@
-APP_NAME=Laravel
+APP_NAME="Iron Bridge"
 APP_ENV=local
 APP_KEY=base64:TCzjZk/EuY+i2msOa2N/NISlE460DgeoURIPt5x0xQY=
-APP_DEBUG=true
+APP_DEBUG=false
 APP_URL=http://localhost
 
 LOG_CHANNEL=stack
