--- a/docker-config/supervisord.conf
+++ b/docker-config/supervisord.conf
@@ -6,6 +6,7 @@ pidfile=/var/run/supervisord.pid
 
 [program:php]
 command=/usr/bin/php -d variables_order=EGPCS /var/www/html/Iron/artisan octane:start --server=swoole --host=0.0.0.0 --port=80
+command=/usr/bin/php /var/www/html/Iron/artisan schedule:work
 environment=LARAVEL_SAIL="1"
 stdout_logfile=/dev/stdout
 stdout_logfile_maxbytes=0
