--- a/docker-compose.yml
+++ b/docker-compose.yml
@@ -14,14 +14,6 @@ services:
             XDEBUG_MODE: '${SAIL_XDEBUG_MODE:-off}'
             XDEBUG_CONFIG: '${SAIL_XDEBUG_CONFIG:-client_host=host.docker.internal}'
         container_name: 'ironApp'
-        deploy:
-          resources:
-            limits:
-              cpus: '0.001'
-              memory: 50M
-            reservations:
-              cpus: '0.0001'
-              memory: 20M
         volumes:
             - '.:/var/www/html/Iron'
         networks:
@@ -51,7 +43,7 @@ services:
         restart: unless-stopped
         tty: true
         command: >
-            --requirepass ${REDIS_PASSWORD}
+            --requirepass ${REDIS_PASSWORD:-yousef}
         ports:
             - '63791:6379'
         volumes:
